--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <img src="https://wallpapercave.com/wp/wp2605262.jpg" alt="">
+            <img src="img/NATURE1.jpg" alt="">
             <rect width="100%" height="100%" fill="#777" />
           </svg>
           <div class="container">
@@ -90,7 +90,7 @@
 
         <div class="carousel-item">
           <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <img src="https://wallpapercave.com/wp/wp3008344.jpg" alt="">
+            <img src="img/NATURE1.jpg" alt="">
             <rect width="100%" height="100%" fill="#777" />
           </svg>
           <div class="container">
@@ -138,7 +138,7 @@
           <h1 class="display-5 fw-bold lh-1 mb-3">Dr. Lloyd Wilson</h1>
           <p class="lead">Head of Department,
             Anaesthesiology and Operating Rooms
-            M.B.B.S., D.A. (Anaesth.), M.D. (Anaesth.)</p><!-- Nav Bar -->
+            M.B.B.S., D.A. (Anaesth.), M.D. (Anaesth.)</p>
 
           <!-- SOCIAL LINKS -->
           <a class="text-muted" href="https://www.instagram.com/prathamesh__surve_/"><svg class="bi" width="24" height="24">
